--- a/index.html
+++ b/index.html
@@ -4,36 +4,36 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/styles.css">
 	<title>WebStudio</title>
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<header class="header">
+	<header>
 		<nav>
 			<a href="/" class="logo">
-				WebStudio
+				<span class="logo-span">Web</span>Studio
 			</a>
-			<ul class="nav">
-				<li><a href="">Studio</a></li>
-				<li><a href="./portfolio.html">Portfolio</a></li>
-				<li><a href="">Contacts</a></li>
+			<ul class="site-nav">
+				<li><a href="" class="link">Studio</a></li>
+				<li><a href="./portfolio.html" class="link">Portfolio</a></li>
+				<li><a href="" class="link">Contacts</a></li>
 			</ul>
 		</nav>
-			<ul>
-				<li class="mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li class="phone"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+			<ul class="contacts-nav">
+				<li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+				<li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
 			</ul>
 	</header>
 	<main>
-	<section>
-		<h1>Effective Solutions <br> for Your Business</h1>
-		<button type="button" class="button">
+	<section class="hero">
+		<h1 class="hero-title">Effective Solutions <br> for Your Business</h1>
+		<button type="button" class="hero-button">
 			Order Service
 		</button>
 	</section>
 
-		<section class="features">
-			<h2>Our features</h2>
+		<section class="section">
+			<h2 class="section-title">Our features</h2>
 			<ul>
 				<li>
 					<h3>Strategy</h3>
@@ -61,8 +61,8 @@
 				</li>
 			</ul>
 		</section>
-		<section class="section-2">
-			<h2>What are we doing</h2>
+		<section class="section">
+			<h2 class="section-title">What are we doing</h2>
 			<ul>
 				<li>
 					<img src="./images/img.jpg" 
@@ -82,8 +82,8 @@
 			</ul>
 		</section>
 
-		<section class="section-3">
-			<h2>Our Team</h2>
+		<section class="section-4">
+			<h2 class="section-title">Our Team</h2>
 			<ul>
 				<li>
 					<img src="./images/img3.jpg" 
@@ -117,12 +117,12 @@
 		</section>
 	</main>
 	<footer class="footer">
-		<a href="./index.html">
-			WebStudio
+		<a href="./index.html" class="logo">
+			<span class="logo-span">Web</span><span class="footer-logo">Studio</span>
 		</a>
-		<p>
+		<p class="footer-p">
 			Increase the flow of customers and sales for your business with digital marketing & growth solutions.
 		</p>
 	</footer>
 </body>
-</html>
+</html> 
