--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>WebStudio</title>
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -32,37 +33,37 @@
 		</button>
 	</section>
 
-		<section class="section">
-			<h2 class="section-title">Our features</h2>
+		<section class="features">
+			<h2 class="title">Our features</h2>
 			<ul>
 				<li>
-					<h3>Strategy</h3>
+					<h3 class="sub-title">Strategy</h3>
 					<p>
 						Our goal is to identify the business problem to walk away with the perfect and creative solution. 
 					</p>
 				</li>
 				<li>
-					<h3>Punctuality</h3>
+					<h3 class="sub-title">Punctuality</h3>
 					<p>
 						Bring the key message to the brand's audience for the best price within the shortest possible time.
 					</p>
 				</li>
 				<li>
-					<h3>Diligence</h3>
+					<h3 class="sub-title">Diligence</h3>
 					<p>
 						Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
 					</p>
 				</li>
-				<li>
-					<h3>Technologies</h3>
+				<li> 
+					<h3 class="sub-title">Technologies</h3>
 					<p>
 						Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
 					</p>
 				</li>
 			</ul>
 		</section>
-		<section class="section">
-			<h2 class="section-title">What are we doing</h2>
+		<section class="examples">
+			<h2 class="title">What are we doing</h2>
 			<ul>
 				<li>
 					<img src="./images/img.jpg" 
@@ -82,35 +83,35 @@
 			</ul>
 		</section>
 
-		<section class="section-4">
-			<h2 class="section-title">Our Team</h2>
+		<section class="team">
+			<h2 class="title">Our Team</h2>
 			<ul>
 				<li>
 					<img src="./images/img3.jpg" 
 					alt="portrait of Mark Guerrero"
 					width="264">
-					<h3>Mark Guerrero</h3>
+					<h3 class="sub-title">Mark Guerrero</h3>
 					<p>Product Designer</p>
 				</li>
 				<li>
 					<img src="./images/img4.jpg" 
 					alt="portrait of Tom Ford"
 					width="264">
-					<h3>Tom Ford</h3>
+					<h3 class="sub-title">Tom Ford</h3>
 					<p>Frontend Developer</p>
 				</li>
 				<li>
 					<img src="./images/img5.jpg" 
 					alt="portrait of Camila Garcia"
 					width="264">
-					<h3>Camila Garcia</h3>
+					<h3 class="sub-title">Camila Garcia</h3>
 					<p>Marketing</p>
 				</li>
 				<li>
 					<img src="./images/img6.jpg" 
 					alt="portrait of Daniel Wilson"
 					width="264">
-					<h3>Daniel Wilson</h3>
+					<h3 class="sub-title">Daniel Wilson</h3>
 					<p>UI Designer</p>
 				</li>
 			</ul>
