--- a/portfolio.html
+++ b/portfolio.html
@@ -4,55 +4,58 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/styles.css">
 	<title>WebStudio</title>
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 	<header>
 		<nav>
-			<a href="/">
-				WebStudio
+			<a href="/" class="logo">
+				<span class="logo-span">Web</span>Studio
 			</a>
-			<ul>
-				<li><a href="./index.html">Studio</a></li>
-				<li><a href="">Portfolio</a></li>
-				<li><a href="">Contacts</a></li>
+			<ul class="site-nav">
+				<li><a href="./index.html" class="link">Studio</a></li>
+				<li><a href="./portfolio.html" class="link">Portfolio</a></li>
+				<li><a href="" class="link">Contacts</a></li>
 			</ul>
 		</nav>
-			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+			<ul class="contacts-nav">
+				<li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+				<li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
 			</ul>
 	</header>
+
 	<main>
 		<section>
-			<ul>
+			<h1>Portfolio</h1>
+			<ul class="filter-menu">
 				<li>
-					<a href=""><button type="button">All</button></a>
+					<button type="button">All</button>
 				</li>
 				<li>
-					<a href=""><button type="button">Web Site</button></a>
+					<button type="button">Web Site</button>
 				</li>
 				<li>
-					<a href=""><button type="button">App</button></a>
+					<button type="button">App</button>
 				</li>
 				<li>
-					<a href=""><button type="button">Design</button></a>
+					<button type="button">Design</button>
 				</li>
 				<li>
-					<a href=""><button type="button">Marketing</button></a>
+					<button type="button">Marketing</button>
 				</li>
 			</ul>
 		</section>
-		<section>
+		<section class="portfolio">
 			<ul>
 				<li>
 					<a href="">
 						<img src="./images/img7.jpg" 
 						alt="Interface of the Bank app"
 						width="360">
-						<h3>Banking App Interface Concept</h3>
-						<p>App</p>
+						<h3 class="sub-title">Banking App Interface Concept</h3>
+						<p class="portfolio-list">App</p>
 					</a>
 				</li>
 				<li>
@@ -60,9 +63,9 @@
 						<img src="./images/img8.jpg" 
 						alt="blue"
 						width="360">
-						<h3>Cashless Payment</h3>
-						<p>Marketing</p>
-						<p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+						<h3 class="sub-title">Cashless Payment</h3>
+						<p class="portfolio-list">Marketing</p>
+						<p class="portfolio-list">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 					</a>
 				</li>
 				<li>
@@ -70,8 +73,8 @@
 						<img src="./images/img9.jpg" 
 						alt="desktop with the meditation app"
 						width="360">
-						<h3>Meditaion App</h3>
-						<p>App</p>
+						<h3 class="sub-title">Meditaion App</h3>
+						<p class="portfolio-list">App</p>
 					</a>
 				</li>
 				<li>
@@ -79,8 +82,8 @@
 						<img src="./images/img10.jpg" 
 						alt="Photo of a taxi"
 						width="360">
-						<h3>Taxi Service</h3>
-						<p>Marketing</p>
+						<h3 class="sub-title">Taxi Service</h3>
+						<p class="portfolio-list">Marketing</p>
 					</a>
 				</li>
 				<li>
@@ -88,8 +91,8 @@
 						<img src="./images/img11.jpg" 
 						alt="Examples of screen Illustrations "
 						width="360">
-						<h3>Screen Illustrations</h3>
-						<p>Design</p>
+						<h3 class="sub-title">Screen Illustrations</h3>
+						<p class="portfolio-list">Design</p>
 					</a>
 				</li>
 				<li>
@@ -97,8 +100,8 @@
 						<img src="./images/img12.jpg" 
 						alt="A girl"
 						width="360">
-						<h3>Online Courses</h3>
-						<p>Marketing</p>
+						<h3 class="sub-title">Online Courses</h3>
+						<p class="portfolio-list">Marketing</p>
 					</a>
 				</li>
 				<li>
@@ -106,8 +109,8 @@
 						<img src="./images/img13.jpg" 
 						alt="references"
 						width="360">
-						<h3>Instagram Stories Concept</h3>
-						<p>Design</p>
+						<h3 class="sub-title">Instagram Stories Concept</h3>
+						<p class="portfolio-list">Design</p>
 					</a>
 				</li>
 				<li>
@@ -115,8 +118,8 @@
 						<img src="./images/img14.jpg" 
 						alt="a bag with vegetables"
 						width="360">
-						<h3>Organic Food</h3>
-						<p>Web Site</p>
+						<h3 class="sub-title">Organic Food</h3>
+						<p class="portfolio-list">Web Site</p>
 					</a>
 				</li>
 				<li>
@@ -124,18 +127,18 @@
 						<img src="./images/img15.jpg" 
 						alt="a cup of coffee"
 						width="360">
-						<h3>Fresh Coffee</h3>
-						<p>Web Site</p>
+						<h3 class="sub-title">Fresh Coffee</h3>
+						<p class="portfolio-list">Web Site</p>
 					</a>
 				</li>
 			</ul>
 		</section>
 	</main>
-	<footer>
-		<a href="./index.html">
-			WebStudio
+	<footer class="footer">
+		<a href="./index.html" class="logo">
+			<span class="logo-span">Web</span><span class="footer-logo">Studio</span>
 		</a>
-		<p>
+		<p class="footer-p">
 			Increase the flow of customers and sales for your business with digital marketing & growth solutions.
 		</p>
 	</footer>
